#156 Enhance blast message and support multiple events. When sending a blast message, some messages might fail. The api response contains the failing ones in an error object and the successful ones. So far, WDK was only storing the first successful message in send-message activity  outputs. In this PR, we add new outputs for the send-message activity to store the list of successful messages and the list of failing ones. The existing outputs are kept along with the new ones. We also changed the behavious of send-message activity when a list of user ids is provided. So far, an MIM with those uses was created or reused. We now send the message in an IM to each user, in a blast fashion. The particularity of send-message with user-ids list remains in the fact that we convert each user-id to a stream id (the corresponding IM). In case of an invalid user-id, the api returns 403 error. In order, to keep processing the rest of user-ids, we catch this error and ignore it.