@@ -8,17 +8,19 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.timeout;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.symphony.bdk.core.service.message.model.Attachment;
 import com.symphony.bdk.core.service.message.model.Message;
+import com.symphony.bdk.gen.api.model.Error;
 import com.symphony.bdk.gen.api.model.Stream;
 import com.symphony.bdk.gen.api.model.V4AttachmentInfo;
 import com.symphony.bdk.gen.api.model.V4Message;
 import com.symphony.bdk.gen.api.model.V4MessageBlastResponse;
 import com.symphony.bdk.gen.api.model.V4Stream;
+import com.symphony.bdk.http.api.ApiException;
+import com.symphony.bdk.http.api.ApiRuntimeException;
 import com.symphony.bdk.template.api.TemplateEngine;
 import com.symphony.bdk.workflow.swadl.SwadlParser;
 import com.symphony.bdk.workflow.swadl.v1.Workflow;
@@ -32,16 +34,19 @@ import org.mockito.ArgumentCaptor;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
+@SuppressWarnings("unchecked")
 class SendMessageIntegrationTest extends IntegrationTest {
 
   private static final String OUTPUTS_MSG_KEY = "%s.outputs.message";
   private static final String OUTPUTS_MSG_ID_KEY = "%s.outputs.msgId";
+  private static final String OUTPUTS_MESSAGES_KEY = "%s.outputs.messages";
+  private static final String OUTPUTS_FAILED_MESSAGES_KEY = "%s.outputs.failedStreamIds";
 
   @Test
   void sendMessageOnMessage() throws Exception {
@@ -56,12 +61,13 @@ class SendMessageIntegrationTest extends IntegrationTest {
 
     ArgumentCaptor<Message> captor = ArgumentCaptor.forClass(Message.class);
     verify(messageService, timeout(5000)).send(anyString(), captor.capture());
-    Message sent = captor.getValue();
-    assertThat(sent.getData()).contains("id", "123456");
 
+    assertThat(captor.getValue().getData()).contains("id", "123456");
     assertThat(workflow).isExecuted()
         .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendMessage1"), message)
-        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendMessage1"), message.getMessageId());
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendMessage1"), message.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendMessage1"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendMessage1"), Collections.EMPTY_LIST);
   }
 
   @Test
@@ -84,52 +90,493 @@ class SendMessageIntegrationTest extends IntegrationTest {
 
     assertThat(workflow).isExecuted()
         .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendmessageid"), message)
-        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendmessageid"), message.getMessageId());
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendmessageid"), message.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendmessageid"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendmessageid"), Collections.EMPTY_LIST);
   }
 
   @Test
-  void sendMessageWithUids() throws Exception {
+  void sendMessageWithOneUid() throws Exception {
     final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-message-with-uids.swadl.yaml"));
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-message-with-user-id.swadl.yaml"));
+    final String content = "<messageML>hello</messageML>";
+    final V4Message message = message(content);
 
-    final List<Long> uids = Arrays.asList(123L, 456L);
-    final String streamId = "STREAM_ID";
+    when(streamService.create(List.of(123L))).thenReturn(stream("streamId1"));
+    when(messageService.send(eq("streamId1"), any(Message.class))).thenReturn(message);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/send-msg-with-userid"));
+
+    ArgumentCaptor<Message> messageCaptor = ArgumentCaptor.forClass(Message.class);
+    ArgumentCaptor<List<Long>> userIdCaptor = ArgumentCaptor.forClass(List.class);
+
+    verify(streamService, timeout(5000)).create(userIdCaptor.capture());
+    verify(messageService, timeout(5000)).send(anyString(), messageCaptor.capture());
+
+    assertThat(userIdCaptor.getAllValues()).hasSize(1);
+    assertThat(userIdCaptor.getValue().get(0)).isEqualTo(123L);
+    assertThat(messageCaptor.getValue().getContent()).isEqualTo(content);
+
+    assertThat(workflow).isExecuted()
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendMessageWithUserId"), message)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendMessageWithUserId"), message.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendMessageWithUserId"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendMessageWithUserId"), Collections.EMPTY_LIST);
+  }
+
+  @ParameterizedTest
+  @CsvSource({"403", "405"})
+  void sendMessageWithInvalidUid(String errorCode) throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-message-with-user-id.swadl.yaml"));
+
+    when(streamService.create(List.of(123L))).thenThrow(
+        new ApiRuntimeException(new ApiException(Integer.parseInt(errorCode), "Invalid user id")));
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/send-msg-with-userid"));
+
+    ArgumentCaptor<List<Long>> userIdCaptor = ArgumentCaptor.forClass(List.class);
+
+    verify(streamService, timeout(5000)).create(userIdCaptor.capture());
+    verify(messageService, never()).send(anyString(), any(Message.class));
+  }
+
+  @Test
+  void sendMessageWithTemplateSuccessful() throws IOException, ProcessingException {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-message-with-freemarker.swadl.yaml"));
+
+    final V4Message message = message("MSG_ID");
+    final TemplateEngine templateEngine = TemplateEngine.getDefaultImplementation();
+
+    when(messageService.templates()).thenReturn(templateEngine);
+    when(messageService.send(eq("123"), any(Message.class))).thenReturn(message);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/send-with-freemarker"));
+
+    ArgumentCaptor<Message> captor = ArgumentCaptor.forClass(Message.class);
+    verify(messageService, timeout(5000).times(1)).send(eq("123"), captor.capture());
+
+    assertThat(captor.getValue().getContent())
+        .isEqualTo("<messageML>Hello <presentationML>world</presentationML> world!\n</messageML>");
+    assertThat(workflow).isExecuted()
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendMessageTemplateWithParams"), message)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendMessageTemplateWithParams"), message.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendMessageTemplateWithParams"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendMessageTemplateWithParams"), Collections.EMPTY_LIST);
+  }
+
+  @Test
+  @DisplayName(
+      "Given a message with attachments, "
+          + "when I send a new message with the attachment id, "
+          + "this specific file is sent in a new message")
+  void sendMessageWithSpecificAttachment() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream(
+            "/message/forward-specific-attachment-in-message.swadl.yaml"));
+    final V4Message messageToReturn = message("msgId");
+
+    final String streamId = "123";
+    final String messageId = "MSG_ID";
+    final String content = "<messageML>here is a msg with attachment</messageML>";
+    final String attachmentFilename = "filename.png";
+    final byte[] encodedBytes = mockBase64ByteArray();
+    final byte[] decodedBytes = Base64.getDecoder().decode(encodedBytes);
+    final List<V4AttachmentInfo> attachments =
+        Collections.singletonList(new V4AttachmentInfo().id("ATTACHMENT_ID").name(attachmentFilename));
+    final V4Stream v4Stream = new V4Stream().streamId("STREAM_ID");
+    final V4Message actualMessage = new V4Message().messageId("MSG_ID").stream(v4Stream).attachments(attachments);
+
+    when(messageService.getMessage(messageId)).thenReturn(actualMessage);
+    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID")).thenReturn(encodedBytes);
+    when(messageService.send(eq(streamId), any(Message.class))).thenReturn(messageToReturn);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/forward-specific"));
+
+    ArgumentCaptor<Message> argumentCaptor = ArgumentCaptor.forClass(Message.class);
+    verify(messageService, timeout(5000)).send(eq(streamId), argumentCaptor.capture());
+
+    Message expectedMessage = this.buildMessage(content,
+        Collections.singletonList(new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename)));
+
+    assertMessage(argumentCaptor.getValue(), expectedMessage);
+
+    assertThat(workflow).executed("forwardProvidedAttachmentInMessageId")
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "forwardProvidedAttachmentInMessageId"), messageToReturn)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "forwardProvidedAttachmentInMessageId"),
+            messageToReturn.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "forwardProvidedAttachmentInMessageId"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "forwardProvidedAttachmentInMessageId"),
+            Collections.EMPTY_LIST);
+  }
+
+  @Test
+  @DisplayName(
+      "Given a message without attachments, when I send a new message with the attachment id, the message is not sent")
+  void sendMessageWithUnfoundMessage() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream(
+            "/message/forward-unfound-message-in-message.swadl.yaml"));
+    final String messageId = "MSG_ID";
+
+    when(messageService.getMessage(messageId)).thenReturn(new V4Message());
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/forward-unfound-message"));
+
+    verify(messageService, never()).send(anyString(), any(Message.class));
+
+    assertThat(workflow).executed("forwardUnfoundMessage").notExecuted("scriptActivityNotToBeExecuted");
+  }
+
+  @Test
+  @DisplayName(
+      "Given an unfound message, when I send a new message with the attachment id, the message is not sent")
+  void sendMessageWithUnfoundAttachment() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream(
+            "/message/forward-unfound-attachment-in-message.swadl.yaml"));
+    final String messageId = "MSG_ID";
+
+    when(messageService.getMessage(messageId)).thenReturn(null);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/forward-unfound-attachment"));
+
+    verify(messageService, never()).send(anyString(), any(Message.class));
+
+    assertThat(workflow).executed("forwardUnfoundAttachment").notExecuted("scriptActivityNotToBeExecuted");
+  }
+
+  @Test
+  @DisplayName(
+      "Given a message with attachments, when I send a new message with multiple attachment ids,"
+          + "then only theses attachments are sent in a new message")
+  void sendMessageWithMultipleAttachments() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream(
+            "/message/forward-multiple-attachments-in-message.swadl.yaml"));
+    final V4Message messageToReturn = message("msgId");
+
+    final String streamId = "123";
+    final String messageId = "MSG_ID";
+    final String content = "<messageML>here is a msg with attachment</messageML>";
+    final String attachmentFilename1 = "filename1.png";
+    final String attachmentFilename2 = "filename2.png";
+    final byte[] encodedBytes = mockBase64ByteArray();
+    final byte[] decodedBytes = Base64.getDecoder().decode(encodedBytes);
+    final List<V4AttachmentInfo> attachments =
+        Arrays.asList(new V4AttachmentInfo().id("ATTACHMENT_ID_1").name(attachmentFilename1),
+            new V4AttachmentInfo().id("ATTACHMENT_ID_2").name(attachmentFilename2));
+    final V4Stream v4Stream = new V4Stream().streamId("STREAM_ID");
+    final V4Message actualMessage = new V4Message().messageId("MSG_ID").stream(v4Stream).attachments(attachments);
+
+    when(messageService.getMessage(messageId)).thenReturn(actualMessage);
+    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID_1")).thenReturn(encodedBytes);
+    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID_2")).thenReturn(encodedBytes);
+    when(messageService.send(eq(streamId), any(Message.class))).thenReturn(messageToReturn);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/forward-multiple"));
+
+    ArgumentCaptor<Message> argumentCaptor = ArgumentCaptor.forClass(Message.class);
+    verify(messageService, timeout(5000)).send(eq(streamId), argumentCaptor.capture());
+
+    Message expectedMessage = this.buildMessage(content,
+        Arrays.asList(new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename1),
+            new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename2)));
+
+    assertMessage(argumentCaptor.getValue(), expectedMessage);
+    assertThat(workflow).executed("forwardMultiple")
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "forwardMultiple"), messageToReturn)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "forwardMultiple"),
+            messageToReturn.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "forwardMultiple"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "forwardMultiple"), Collections.EMPTY_LIST);
+  }
+
+  @Test
+  @DisplayName(
+      "Given a message with attachments, when I send a new message without any attachment id,"
+          + "then all message's attachments are sent in a new message")
+  void sendMessageWithAllAttachments() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/forward-all-attachments-in-message.swadl.yaml"));
+    final V4Message messageToReturn = message("msgId");
+
+    final String streamId = "123";
+    final String messageId = "MSG_ID";
+    final String content = "<messageML>here is a msg with attachment</messageML>";
+    final String attachmentFilename1 = "filename1.png";
+    final String attachmentFilename2 = "filename2.png";
+    final byte[] encodedBytes = mockBase64ByteArray();
+    final byte[] decodedBytes = Base64.getDecoder().decode(encodedBytes);
+    final List<V4AttachmentInfo> attachments =
+        Arrays.asList(new V4AttachmentInfo().id("ATTACHMENT_ID_1").name(attachmentFilename1),
+            new V4AttachmentInfo().id("ATTACHMENT_ID_2").name(attachmentFilename2));
+    final V4Stream v4Stream = new V4Stream().streamId("STREAM_ID");
+    final V4Message actualMessage = new V4Message().messageId("MSG_ID").stream(v4Stream).attachments(attachments);
+
+    when(messageService.getMessage(messageId)).thenReturn(actualMessage);
+    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID_1")).thenReturn(encodedBytes);
+    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID_2")).thenReturn(encodedBytes);
+    when(messageService.send(eq(streamId), any(Message.class))).thenReturn(messageToReturn);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/forward-all"));
+
+    ArgumentCaptor<Message> argumentCaptor = ArgumentCaptor.forClass(Message.class);
+    verify(messageService, timeout(5000)).send(eq(streamId), argumentCaptor.capture());
+
+    Message expectedMessage = this.buildMessage(content,
+        Arrays.asList(new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename1),
+            new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename2)));
+
+    assertMessage(argumentCaptor.getValue(), expectedMessage);
+    assertThat(workflow).executed("forwardAll")
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "forwardAll"), messageToReturn)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "forwardAll"),
+            messageToReturn.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "forwardAll"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "forwardAll"), Collections.EMPTY_LIST);
+  }
+
+  @Test
+  @DisplayName(
+      "Given a local stored file, when I send a new message with the file path,"
+          + "then the file is sent as attachment in a new message")
+  void sendMessageWithAttachmentsFromFile() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(
+            getClass().getResourceAsStream("/message/send-attachments-from-file-in-message.swadl.yaml"));
+    final String content = "<messageML>here is a msg with attachment</messageML>";
+    final V4Message messageToReturn = message("MSG_WITH_ATTACHMENT_ID");
+
+    when(messageService.send(eq("123"), any(Message.class))).thenReturn(messageToReturn);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/send-attachment-from-file"));
+
+    ArgumentCaptor<Message> argumentCaptor = ArgumentCaptor.forClass(Message.class);
+    verify(messageService, timeout(5000)).send(anyString(), argumentCaptor.capture());
+
+    Message messageSent = argumentCaptor.getValue();
+    assertThat(messageSent).as("A non null message has been sent").isNotNull();
+    assertThat(messageSent.getContent()).as("The sent message has the correct content").isEqualTo(content);
+    assertThat(messageSent.getAttachments()).as("The sent message has 2 attachments").hasSize(2);
+
+    assertThat(workflow).executed("sendAttachmentFromFileInMessageId")
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendAttachmentFromFileInMessageId"), messageToReturn)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendAttachmentFromFileInMessageId"),
+            messageToReturn.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendAttachmentFromFileInMessageId"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendAttachmentFromFileInMessageId"),
+            Collections.EMPTY_LIST);
+  }
+
+  @Test
+  void sendBlastMessageWithStreamIdsAllSuccessful() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-blast-message-with-stream-ids.swadl.yaml"));
+    final V4Message message = new V4Message();
+    V4MessageBlastResponse response = new V4MessageBlastResponse().messages(Collections.singletonList(message));
+
+    when(messageService.send(eq(List.of("ABC", "DEF")), any())).thenReturn(response);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/send-blast"));
+
+    verify(messageService, timeout(5000)).send(eq(List.of("ABC", "DEF")), any());
+
+    assertThat(workflow).executed("sendBlastMessageWithStreamIds")
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendBlastMessageWithStreamIds"), message)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendBlastMessageWithStreamIds"), message.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendBlastMessageWithStreamIds"),
+            Collections.singletonList(message))
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendBlastMessageWithStreamIds"), Collections.EMPTY_LIST);
+  }
+
+  @Test
+  void sendBlastMessageWithStreamIdsAllFailing() throws Exception {
+    final Workflow workflow = SwadlParser.fromYaml(
+        getClass().getResourceAsStream("/message/send-blast-message-with-stream-ids-all-failing.swadl.yaml"));
+
+    final Map<String, Error> errors = Map.of("ABC", new Error().code(403), "DEF", new Error().code(403));
+    final V4MessageBlastResponse response = new V4MessageBlastResponse().errors(errors);
+
+    when(messageService.send(eq(List.of("ABC", "DEF")), any(Message.class))).thenReturn(response);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/send-blast"));
+
+    ArgumentCaptor<Message> captor = ArgumentCaptor.forClass(Message.class);
+
+    verify(messageService, timeout(5000)).send(eq(List.of("ABC", "DEF")), captor.capture());
+
+    assertThat(captor.getValue().getContent()).isEqualTo("<messageML>hello</messageML>");
+    assertThat(workflow).executed("sendBlastMessageWithStreamIdsAllFailing")
+        .notExecuted("scriptActivityNotToBeExecuted");
+  }
+
+  @Test
+  void sendBlastMessageWithStreamIdsOneSuccessfulOneFailing() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-blast-message-with-stream-ids.swadl.yaml"));
+
+    final V4Message successfulMessage =
+        new V4Message().stream(new V4Stream().streamId("ABC")).message("<messageML>hello</messageML>");
+    final Map<String, Error> errors = Map.of("DEF", new Error().code(403));
+    final V4MessageBlastResponse response =
+        new V4MessageBlastResponse().errors(errors).messages(Collections.singletonList(successfulMessage));
+
+    when(messageService.send(eq(List.of("ABC", "DEF")), any())).thenReturn(response);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/send-blast"));
+
+    ArgumentCaptor<Message> captor = ArgumentCaptor.forClass(Message.class);
+
+    verify(messageService, timeout(5000)).send(eq(List.of("ABC", "DEF")), captor.capture());
+
+    assertThat(captor.getValue().getContent()).isEqualTo("<messageML>hello</messageML>");
+    assertThat(workflow).executed("sendBlastMessageWithStreamIds")
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendBlastMessageWithStreamIds"), successfulMessage)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendBlastMessageWithStreamIds"),
+            successfulMessage.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendBlastMessageWithStreamIds"),
+            Collections.singletonList(successfulMessage))
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendBlastMessageWithStreamIds"),
+            Collections.singletonList("DEF"));
+  }
+
+  @Test
+  void sendBlastMessageWithUidsAllSuccessful() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-blast-message-with-uids.swadl.yaml"));
+
+    final String streamId1 = "STREAM_ID_1";
+    final String streamId2 = "STREAM_ID_2";
     final String msgId = "MSG_ID";
     final String content = "<messageML>hello</messageML>";
     final V4Message message = message(msgId);
+    final V4MessageBlastResponse response = new V4MessageBlastResponse().addMessagesItem(message);
 
-    when(streamService.create(uids)).thenReturn(stream(streamId));
-    when(messageService.send(eq(streamId), any(Message.class))).thenReturn(message);
+    when(streamService.create(List.of(123L))).thenReturn(stream(streamId1));
+    when(streamService.create(List.of(456L))).thenReturn(stream(streamId2));
+    when(messageService.send(eq(List.of(streamId1, streamId2)), any(Message.class))).thenReturn(response);
 
     engine.deploy(workflow);
     engine.onEvent(messageReceived("/send"));
 
-    ArgumentCaptor<String> stringArgumentCaptor = ArgumentCaptor.forClass(String.class);
-
-    @SuppressWarnings("unchecked")
-    ArgumentCaptor<List<Long>> listArgumentCaptor = ArgumentCaptor.forClass(List.class);
+    ArgumentCaptor<List<Long>> userIdsCaptor = ArgumentCaptor.forClass(List.class);
+    ArgumentCaptor<List<String>> streamIdsArgumentCaptor = ArgumentCaptor.forClass(List.class);
     ArgumentCaptor<Message> messageArgumentCaptor = ArgumentCaptor.forClass(Message.class);
 
-    verify(streamService, timeout(5000).times(1)).create(listArgumentCaptor.capture());
-    verify(messageService, timeout(5000).times(1)).send(stringArgumentCaptor.capture(),
+    verify(streamService, timeout(5000).times(2)).create(userIdsCaptor.capture());
+    verify(messageService, timeout(5000).times(1)).send(streamIdsArgumentCaptor.capture(),
         messageArgumentCaptor.capture());
 
-    assertThat(listArgumentCaptor.getAllValues().size()).as("The create method is called with a list as parameter")
-        .isEqualTo(1);
-    assertThat(listArgumentCaptor.getAllValues().get(0)).isEqualTo(uids);
-    assertThat(stringArgumentCaptor.getValue()).isEqualTo(streamId);
+    assertThat(userIdsCaptor.getAllValues()).as("One create method is called by user id").hasSize(2);
+    assertThat(userIdsCaptor.getAllValues().get(0).get(0)).isEqualTo(123L);
+    assertThat(userIdsCaptor.getAllValues().get(1).get(0)).isEqualTo(456L);
+
+    assertThat(streamIdsArgumentCaptor.getValue()).hasSameElementsAs(List.of(streamId1, streamId2));
     assertThat(messageArgumentCaptor.getValue().getContent()).isEqualTo(content);
 
     assertThat(workflow).isExecuted()
-        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendMessageWithUserIds"), message)
-        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendMessageWithUserIds"), message.getMessageId());
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendBlastMessageWithUserIds"), message)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendBlastMessageWithUserIds"), message.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendBlastMessageWithUserIds"),
+            Collections.singletonList(message))
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendBlastMessageWithUserIds"), Collections.EMPTY_LIST);
   }
 
   @Test
-  @SuppressWarnings("unchecked")
-  void sendMessageWithUidsVariables() throws Exception {
+  void sendBlastMessageWithUidsOneSuccessfulOneFailing() throws Exception {
     final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-message-with-uids-variables.swadl.yaml"));
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-blast-message-with-uids.swadl.yaml"));
+
+    final String streamId1 = "STREAM_ID_1";
+    final String streamId2 = "STREAM_ID_2";
+    final String msgId = "MSG_ID";
+    final String content = "<messageML>hello</messageML>";
+    final V4Message message = message(msgId);
+    final Map<String, Error> errors = Map.of(streamId2, new Error().code(403));
+    final V4MessageBlastResponse response =
+        new V4MessageBlastResponse().errors(errors).messages(Collections.singletonList(message));
+
+    when(streamService.create(List.of(123L))).thenReturn(stream(streamId1));
+    when(streamService.create(List.of(456L))).thenReturn(stream(streamId2));
+    when(messageService.send(eq(List.of(streamId1, streamId2)), any(Message.class))).thenReturn(response);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/send"));
+
+    ArgumentCaptor<List<Long>> userIdsCaptor = ArgumentCaptor.forClass(List.class);
+    ArgumentCaptor<List<String>> streamIdsArgumentCaptor = ArgumentCaptor.forClass(List.class);
+    ArgumentCaptor<Message> messageArgumentCaptor = ArgumentCaptor.forClass(Message.class);
+
+    verify(streamService, timeout(5000).times(2)).create(userIdsCaptor.capture());
+    verify(messageService, timeout(5000).times(1)).send(streamIdsArgumentCaptor.capture(),
+        messageArgumentCaptor.capture());
+
+    assertThat(userIdsCaptor.getAllValues()).as("One create method is called by user id").hasSize(2);
+    assertThat(userIdsCaptor.getAllValues().get(0).get(0)).isEqualTo(123L);
+    assertThat(userIdsCaptor.getAllValues().get(1).get(0)).isEqualTo(456L);
+
+    assertThat(streamIdsArgumentCaptor.getValue()).hasSameElementsAs(List.of(streamId1, streamId2));
+    assertThat(messageArgumentCaptor.getValue().getContent()).isEqualTo(content);
+
+    assertThat(workflow).isExecuted()
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendBlastMessageWithUserIds"), message)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendBlastMessageWithUserIds"), message.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendBlastMessageWithUserIds"),
+            Collections.singletonList(message))
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendBlastMessageWithUserIds"),
+            Collections.singletonList(streamId2));
+  }
+
+  @Test
+  void sendBlastMessageWithUidsAllFailing() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-blast-message-with-uids-all-failing.swadl.yaml"));
+
+    final String streamId1 = "STREAM_ID_1";
+    final String streamId2 = "STREAM_ID_2";
+    final Map<String, Error> errors = Map.of(streamId1, new Error().code(403), streamId2, new Error().code(403));
+    final V4MessageBlastResponse response = new V4MessageBlastResponse().errors(errors);
+
+    when(streamService.create(List.of(123L))).thenReturn(stream(streamId1));
+    when(streamService.create(List.of(456L))).thenReturn(stream(streamId2));
+    when(messageService.send(eq(List.of(streamId1, streamId2)), any(Message.class))).thenReturn(response);
+
+    engine.deploy(workflow);
+    engine.onEvent(messageReceived("/send"));
+
+    ArgumentCaptor<List<Long>> userIdsCaptor = ArgumentCaptor.forClass(List.class);
+    ArgumentCaptor<List<String>> streamIdsArgumentCaptor = ArgumentCaptor.forClass(List.class);
+
+    verify(streamService, timeout(5000).times(2)).create(userIdsCaptor.capture());
+    verify(messageService, timeout(5000).times(1)).send(streamIdsArgumentCaptor.capture(), any());
+
+    assertThat(userIdsCaptor.getAllValues()).as("One create method is called by user id").hasSize(2);
+    assertThat(userIdsCaptor.getAllValues().get(0).get(0)).isEqualTo(123L);
+    assertThat(userIdsCaptor.getAllValues().get(1).get(0)).isEqualTo(456L);
+
+    assertThat(streamIdsArgumentCaptor.getValue()).hasSameElementsAs(List.of(streamId1, streamId2));
+
+    assertThat(workflow).executed("sendBlastMessageWithUserIdsAllFailing").notExecuted("scriptActivityNotToBeExecuted");
+  }
+
+  @Test
+  void sendBlastMessageWithUidsVariables() throws Exception {
+    final Workflow workflow =
+        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-message-blast-with-uids-variables.swadl.yaml"));
 
     final List<Long> uids = List.of(123L);
     final String streamId = "STREAM_ID";
@@ -151,242 +598,16 @@ class SendMessageIntegrationTest extends IntegrationTest {
     verify(messageService, timeout(5000).times(1)).send(stringArgumentCaptor.capture(),
         messageArgumentCaptor.capture());
 
-    assertThat(listArgumentCaptor.getAllValues().size()).as("The create method is called with a list as parameter")
-        .isEqualTo(1);
+    assertThat(listArgumentCaptor.getAllValues()).as("The create method is called with a list as parameter").hasSize(1);
     assertThat(listArgumentCaptor.getAllValues().get(0)).isEqualTo(uids);
     assertThat(stringArgumentCaptor.getValue()).isEqualTo(streamId);
     assertThat(messageArgumentCaptor.getValue().getContent()).isEqualTo(content);
 
     assertThat(workflow).isExecuted()
-        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendMessageWithUserIds"), message)
-        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendMessageWithUserIds"), message.getMessageId());
-  }
-
-  @Test
-  void sendMessageWithTemplateSuccessful() throws IOException, ProcessingException {
-    final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-message-with-freemarker.swadl.yaml"));
-
-    TemplateEngine templateEngine = TemplateEngine.getDefaultImplementation();
-    when(messageService.templates()).thenReturn(templateEngine);
-    when(messageService.send(eq("123"), any(Message.class))).thenReturn(message("MSG_ID"));
-
-    engine.deploy(workflow);
-    engine.onEvent(messageReceived("/send-with-freemarker"));
-
-    assertThat(workflow).isExecuted();
-    ArgumentCaptor<Message> messageArgumentCaptor = ArgumentCaptor.forClass(Message.class);
-    verify(messageService, times(1)).send(eq("123"), messageArgumentCaptor.capture());
-    assertThat(messageArgumentCaptor.getValue().getContent())
-        .isEqualTo("<messageML>Hello <presentationML>world</presentationML> world!\n</messageML>");
-  }
-
-  @Test
-  @DisplayName(
-      "Given a message with attachments, "
-          + "when I send a new message with the attachment id, "
-          + "this specific file is sent in a new message")
-  void sendMessageWithSpecificAttachment() throws Exception {
-    final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream(
-            "/message/forward-specific-attachment-in-message.swadl.yaml"));
-    final V4Message messageToReturn = message("msgId");
-
-    final String streamId = "123";
-    final String messageId = "MSG_ID";
-    final String content = "<messageML>here is a msg with attachment</messageML>";
-    final String attachmentFilename = "filename.png";
-    final byte[] encodedBytes = mockBase64ByteArray();
-    final byte[] decodedBytes = Base64.getDecoder().decode(encodedBytes);
-    final List<V4AttachmentInfo> attachments = new ArrayList<>();
-    attachments.add(new V4AttachmentInfo().id("ATTACHMENT_ID").name(attachmentFilename));
-    final V4Message actualMessage = new V4Message();
-    final V4Stream v4Stream = new V4Stream();
-    v4Stream.setStreamId("STREAM_ID");
-    actualMessage.setMessageId("MSG_ID");
-    actualMessage.setStream(v4Stream);
-    actualMessage.setAttachments(attachments);
-
-    when(messageService.getMessage(messageId)).thenReturn(actualMessage);
-    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID")).thenReturn(encodedBytes);
-    when(messageService.send(eq(streamId), any(Message.class))).thenReturn(messageToReturn);
-
-    engine.deploy(workflow);
-    engine.onEvent(messageReceived("/forward-specific"));
-
-    ArgumentCaptor<Message> argumentCaptor = ArgumentCaptor.forClass(Message.class);
-    verify(messageService, timeout(5000)).send(eq(streamId), argumentCaptor.capture());
-
-    Message expectedMessage = this.buildMessage(content,
-        Collections.singletonList(new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename)));
-
-    assertMessage(argumentCaptor.getValue(), expectedMessage);
-  }
-
-  @Test
-  @DisplayName(
-      "Given a message without attachments, when I send a new message with the attachment id, the message is not sent")
-  void sendMessageWithUnfoundMessage() throws Exception {
-    final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream(
-            "/message/forward-unfound-message-in-message.swadl.yaml"));
-
-    final String messageId = "MSG_ID";
-
-    when(messageService.getMessage(messageId)).thenReturn(new V4Message());
-
-    engine.deploy(workflow);
-
-    engine.onEvent(messageReceived("/forward-unfound-message"));
-
-    verify(messageService, never()).send(anyString(), any(Message.class));
-  }
-
-  @Test
-  @DisplayName(
-      "Given an unfound message, when I send a new message with the attachment id, the message is not sent")
-  void sendMessageWithUnfoundAttachment() throws Exception {
-    final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream(
-            "/message/forward-unfound-attachment-in-message.swadl.yaml"));
-
-    final String messageId = "MSG_ID";
-
-    when(messageService.getMessage(messageId)).thenReturn(null);
-
-    engine.deploy(workflow);
-
-    engine.onEvent(messageReceived("/forward-unfound-attachment"));
-
-    verify(messageService, never()).send(anyString(), any(Message.class));
-  }
-
-  @Test
-  @DisplayName(
-      "Given a message with attachments, when I send a new message with multiple attachment ids,"
-          + "then only theses attachments are sent in a new message")
-  void sendMessageWithMultipleAttachments() throws Exception {
-    final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream(
-            "/message/forward-multiple-attachments-in-message.swadl.yaml"));
-    final V4Message messageToReturn = message("msgId");
-
-    final String streamId = "123";
-    final String messageId = "MSG_ID";
-    final String content = "<messageML>here is a msg with attachment</messageML>";
-    final String attachmentFilename1 = "filename1.png";
-    final String attachmentFilename2 = "filename2.png";
-    final byte[] encodedBytes = mockBase64ByteArray();
-    final byte[] decodedBytes = Base64.getDecoder().decode(encodedBytes);
-    final List<V4AttachmentInfo> attachments = new ArrayList<>();
-    attachments.add(new V4AttachmentInfo().id("ATTACHMENT_ID_1").name(attachmentFilename1));
-    attachments.add(new V4AttachmentInfo().id("ATTACHMENT_ID_2").name(attachmentFilename2));
-    final V4Message actualMessage = new V4Message();
-    final V4Stream v4Stream = new V4Stream();
-    v4Stream.setStreamId("STREAM_ID");
-    actualMessage.setMessageId("MSG_ID");
-    actualMessage.setStream(v4Stream);
-    actualMessage.setAttachments(attachments);
-
-    when(messageService.getMessage(messageId)).thenReturn(actualMessage);
-    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID_1")).thenReturn(encodedBytes);
-    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID_2")).thenReturn(encodedBytes);
-    when(messageService.send(eq(streamId), any(Message.class))).thenReturn(messageToReturn);
-
-    engine.deploy(workflow);
-    engine.onEvent(messageReceived("/forward-multiple"));
-
-    ArgumentCaptor<Message> argumentCaptor = ArgumentCaptor.forClass(Message.class);
-    verify(messageService, timeout(5000)).send(eq(streamId), argumentCaptor.capture());
-
-    Message expectedMessage = this.buildMessage(content,
-        Arrays.asList(new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename1),
-            new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename2)));
-
-    assertMessage(argumentCaptor.getValue(), expectedMessage);
-  }
-
-  @Test
-  @DisplayName(
-      "Given a message with attachments, when I send a new message without any attachment id,"
-          + "then all message's attachments are sent in a new message")
-  void sendMessageWithAllAttachments() throws Exception {
-    final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/forward-all-attachments-in-message.swadl.yaml"));
-    final V4Message messageToReturn = message("msgId");
-
-    final String streamId = "123";
-    final String messageId = "MSG_ID";
-    final String content = "<messageML>here is a msg with attachment</messageML>";
-    final String attachmentFilename1 = "filename1.png";
-    final String attachmentFilename2 = "filename2.png";
-    final byte[] encodedBytes = mockBase64ByteArray();
-    final byte[] decodedBytes = Base64.getDecoder().decode(encodedBytes);
-    final List<V4AttachmentInfo> attachments = new ArrayList<>();
-    attachments.add(new V4AttachmentInfo().id("ATTACHMENT_ID_1").name(attachmentFilename1));
-    attachments.add(new V4AttachmentInfo().id("ATTACHMENT_ID_2").name(attachmentFilename2));
-    final V4Message actualMessage = new V4Message();
-    final V4Stream v4Stream = new V4Stream();
-    v4Stream.setStreamId("STREAM_ID");
-    actualMessage.setMessageId("MSG_ID");
-    actualMessage.setStream(v4Stream);
-    actualMessage.setAttachments(attachments);
-
-    when(messageService.getMessage(messageId)).thenReturn(actualMessage);
-    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID_1")).thenReturn(encodedBytes);
-    when(messageService.getAttachment("STREAM_ID", "MSG_ID", "ATTACHMENT_ID_2")).thenReturn(encodedBytes);
-    when(messageService.send(eq(streamId), any(Message.class))).thenReturn(messageToReturn);
-
-    engine.deploy(workflow);
-    engine.onEvent(messageReceived("/forward-all"));
-
-    ArgumentCaptor<Message> argumentCaptor = ArgumentCaptor.forClass(Message.class);
-    verify(messageService, timeout(5000)).send(eq(streamId), argumentCaptor.capture());
-
-    Message expectedMessage = this.buildMessage(content,
-        Arrays.asList(new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename1),
-            new Attachment(new ByteArrayInputStream(decodedBytes), attachmentFilename2)));
-
-    assertMessage(argumentCaptor.getValue(), expectedMessage);
-  }
-
-  @Test
-  @DisplayName(
-      "Given a local stored file, when I send a new message with the file path,"
-          + "then the file is sent as attachment in a new message")
-  void sendMessageWithAttachmentsFromFile() throws Exception {
-    final Workflow workflow =
-        SwadlParser.fromYaml(
-            getClass().getResourceAsStream("/message/send-attachments-from-file-in-message.swadl.yaml"));
-    final String content = "<messageML>here is a msg with attachment</messageML>";
-
-    when(messageService.send(eq("123"), any(Message.class))).thenReturn(message("MSG_WITH_ATTACHMENT_ID"));
-
-    engine.deploy(workflow);
-    engine.onEvent(messageReceived("/send-attachment-from-file"));
-
-    ArgumentCaptor<Message> argumentCaptor = ArgumentCaptor.forClass(Message.class);
-    verify(messageService, timeout(5000)).send(anyString(), argumentCaptor.capture());
-
-    Message messageSent = argumentCaptor.getValue();
-    assertThat(messageSent).as("A non null message has been sent").isNotNull();
-    assertThat(messageSent.getContent()).as("The sent message has the correct content").isEqualTo(content);
-    assertThat(messageSent.getAttachments().size()).as("The sent message has 2 attachments").isEqualTo(2);
-  }
-
-  @Test
-  void sendBlastMessage() throws Exception {
-    final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream("/message/send-blast-message.swadl.yaml"));
-
-    V4MessageBlastResponse response = new V4MessageBlastResponse();
-    response.addMessagesItem(new V4Message());
-    when(messageService.send(eq(List.of("ABC", "DEF")), any())).thenReturn(response);
-
-    engine.deploy(workflow);
-    engine.onEvent(messageReceived("/send-blast"));
-
-    verify(messageService, timeout(5000)).send(eq(List.of("ABC", "DEF")), any());
+        .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendBlastMessageWithUserIds"), message)
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendBlastMessageWithUserIds"), message.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendBlastMessageWithUserIds"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendBlastMessageWithUserIds"), Collections.EMPTY_LIST);
   }
 
   @ParameterizedTest
@@ -408,7 +629,9 @@ class SendMessageIntegrationTest extends IntegrationTest {
 
     assertThat(workflow).isExecuted()
         .hasOutput(String.format(OUTPUTS_MSG_KEY, "sendMessageObo"), message)
-        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendMessageObo"), message.getMessageId());
+        .hasOutput(String.format(OUTPUTS_MSG_ID_KEY, "sendMessageObo"), message.getMessageId())
+        .hasOutput(String.format(OUTPUTS_MESSAGES_KEY, "sendMessageObo"), Collections.EMPTY_LIST)
+        .hasOutput(String.format(OUTPUTS_FAILED_MESSAGES_KEY, "sendMessageObo"), Collections.EMPTY_LIST);
   }
 
   @Test
@@ -425,14 +648,17 @@ class SendMessageIntegrationTest extends IntegrationTest {
         .notExecuted("scriptActivityNotToBeExecuted");
   }
 
-  @Test
-  void sendBlastMessageOboNotSupported() throws Exception {
-    final Workflow workflow =
-        SwadlParser.fromYaml(getClass().getResourceAsStream(
-            "/message/obo/send-blast-message-obo-not-supported.swadl.yaml"));
+  @ParameterizedTest
+  @CsvSource({"/message/obo/send-blast-message-obo-not-supported.swadl.yaml",
+      "/message/obo/send-blast-message-with-userids-obo-not-supported.swadl.yaml"})
+  void sendBlastMessageOboNotSupported(String workflowFile) throws Exception {
+    final Workflow workflow = SwadlParser.fromYaml(getClass().getResourceAsStream(workflowFile));
 
     when(bdkGateway.obo(any(String.class))).thenReturn(botSession);
     when(bdkGateway.obo(any(Long.class))).thenReturn(botSession);
+
+    when(streamService.create(List.of(123L))).thenReturn(stream("streamId1"));
+    when(streamService.create(List.of(456L))).thenReturn(stream("streamId2"));
 
     engine.deploy(workflow);
     engine.onEvent(messageReceived("/message-not-supported"));
